# runclim

./: .clang-tidy  .gitignore  LICENSE  README.md  meson.build
client/: .clang-format  meson.build
client/include/: my_frame.hpp
client/src/: my_frame.cpp
include/: my_frame.hpp
server/: create_eps_script.py  postprocess.py  setup.sh
server/eps-postprocessor/: .gitignore  README.md
server/eps-postprocessor/epspost/: __init__.py  img_to_dem.py  orograph.py
server/epspost/: __init__.py  img_to_dem.py  temp.py
src/: app.cpp  main.cpp  my_frame.cpp
